--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
               <a href="./index.html" class="nav-link">Студія</a>
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link">Портфоліо</a>
+              <a href="./portfolio.html" class="nav-link current">Портфоліо</a>
             </li>
             <li class="nav-item">
               <a href="./contacts.html" class="nav-link">Контакти</a>
@@ -85,12 +85,19 @@
           <ul class="projects list">
             <li class="project-card">
               <a class="project-link" href="">
-                <img
+                <div class="thumb">
+                  <img
                   src="./images/portfolio/laptop.jpg"
                   alt="вебсайт на компьютері"
                   width="370"
                   height="294"
                 />
+                <p class="overlay-desc">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="desc-content">
                   <h2 class="project-title">Технокряк</h2>
                   <p class="project-desc">Веб-сайт</p>
@@ -99,12 +106,19 @@
             </li>
             <li class="project-card">
               <a class="project-link" href="">
-                <img
+                <div class="thumb">
+                  <img
                   src="./images/portfolio/basketball.jpg"
                   alt="два гравця в баскетбол"
                   width="370"
                   height="294"
                 />
+                <p class="overlay-desc">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="desc-content">
                   <h2 class="project-title">
                     Постер New Orlean vs Golden Star
@@ -115,12 +129,19 @@
             </li>
             <li class="project-card">
               <a class="project-link" href="">
-                <img
+                <div class="thumb">
+                  <img
                   src="./images/portfolio/seafood.jpg"
                   alt="seafood ресторан логотип"
                   width="370"
                   height="294"
                 />
+                <p class="overlay-desc">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="desc-content">
                   <h2 class="project-title">Ресторан Seafood</h2>
                   <p class="project-desc">Додаток</p>
@@ -129,12 +150,19 @@
             </li>
             <li class="project-card">
               <a class="project-link" href="">
-                <img
+                <div class="thumb">
+                  <img
                   src="./images/portfolio/headphones.jpg"
                   alt="навушники"
                   width="370"
                   height="294"
                 />
+                <p class="overlay-desc">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="desc-content">
                   <h2 class="project-title">Проєкт Prime</h2>
                   <p class="project-desc">Маркетинг</p>
@@ -143,12 +171,19 @@
             </li>
             <li class="project-card">
               <a class="project-link" href="">
-                <img
+                <div class="thumb">
+                  <img
                   src="./images/portfolio/boxes.jpg"
                   alt="одна біла і коричнева коробки"
                   width="370"
                   height="294"
                 />
+                <p class="overlay-desc">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="desc-content">
                   <h2 class="project-title">Проєкт Boxes</h2>
                   <p class="project-desc">Додаток</p>
@@ -157,12 +192,19 @@
             </li>
             <li class="project-card">
               <a class="project-link" href="">
-                <img
+                <div class="thumb">
+                  <img
                   src="./images/portfolio/imac.jpg"
                   alt="сайт на аймаку"
                   width="370"
                   height="294"
                 />
+                <p class="overlay-desc">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="desc-content">
                   <h2 class="project-title">Inspiration has no Borders</h2>
                   <p class="project-desc">Веб-сайт</p>
@@ -171,12 +213,19 @@
             </li>
             <li class="project-card">
               <a class="project-link" href="">
-                <img
+                <div class="thumb">
+                  <img
                   src="./images/portfolio/book.jpg"
                   alt="сторінки в книжці"
                   width="370"
                   height="294"
                 />
+                <p class="overlay-desc">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="desc-content">
                   <h2 class="project-title">Видання Limited Edition</h2>
                   <p class="project-desc">Дизайн</p>
@@ -185,12 +234,19 @@
             </li>
             <li class="project-card">
               <a class="project-link" href="">
-                <img
+                <div class="thumb">
+                  <img
                   src="./images/portfolio/price-tag.jpg"
                   alt="цінник"
                   width="370"
                   height="294"
                 />
+                <p class="overlay-desc">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="desc-content">
                   <h2 class="project-title">Проєкт LAB</h2>
                   <p class="project-desc">Маркетинг</p>
@@ -199,12 +255,19 @@
             </li>
             <li class="project-card">
               <a class="project-link" href="">
-                <img
+                <div class="thumb">
+                  <img
                   src="./images/portfolio/laptop2.jpg"
                   alt="робота за ноутбуком"
                   width="370"
                   height="294"
                 />
+                <p class="overlay-desc">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="desc-content">
                   <h2 class="project-title">Growing Business</h2>
                   <p class="project-desc">Додаток</p>
