--- a/contacts.html
+++ b/contacts.html
@@ -32,7 +32,7 @@
               <a href="./portfolio.html" class="nav-link">Портфоліо</a>
             </li>
             <li class="nav-item">
-              <a href="./contacts.html" class="nav-link">Контакти</a>
+              <a href="./contacts.html" class="nav-link current">Контакти</a>
             </li>
           </ul>
         </nav>
